tests/should_fail/for_destructure_arity_3_on_2.nv
module test
// for destructure: 3-tuple pattern on list of 2-tuples (wrong arity)
let pairs: [(Int, Int)] = [(1, 2), (3, 4)]
for (a, b, c) in pairs {
    println(Cast::string(a))
}
